# DraftingLol

./: .gitignore  Cargo.toml  README.md  eslint.config.js  package.json  vitest.config.ts
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: main.tsx  styles.css  types.ts  utils.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 0001_initial_schema.sql
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/adapters/: mod.rs
apps/desktop/src-tauri/src/adapters/champ_select/: mod.rs
apps/desktop/src-tauri/src/adapters/riot_client/: mod.rs
apps/desktop/src-tauri/src/application/: mod.rs  recommendations.rs  review.rs
apps/desktop/src-tauri/src/commands/: config.rs  health.rs  mod.rs  recommendations.rs  workflows.rs
apps/desktop/src-tauri/src/domain/: champion.rs  composition.rs  draft.rs  mod.rs  scoring.rs
apps/desktop/src-tauri/src/services/: app_state.rs  catalog_service.rs  live_service.rs  mod.rs  recommendation_service.rs
apps/desktop/src-tauri/src/storage/: connection.rs  error.rs  import_export.rs  mod.rs  models.rs  repositories.rs
apps/desktop/src-tauri/src/tests/: domain_model_tests.rs  mod.rs  scenario_tests.rs  support.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/components/: ui.tsx
docs/architecture/: README.md
docs/database/: README.md
docs/domain/: README.md
docs/product/: README.md
docs/scoring/: README.md
docs/setup/: README.md
docs/test-scenarios/: README.md
scripts/import_ddragon/: README.md
scripts/seed_data/: README.md
(+12 files in other folders)
