[package]
name = "draft-team-app-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
